--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "ua-parser-js": "^2.0.2"
   },
