--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
